fix(button): disabled on safari

--- a/src/index.css
+++ b/src/index.css
@@ -63,14 +63,13 @@ button {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   cursor: pointer;
-  appearance: none;
-  -webkit-appearance: none;
 }
 
 .button:disabled {
   opacity: 0.65;
-  appearance: none;
   -webkit-appearance: none;
+  -moz-opacity: 0.65; /* Firefox and Mozilla browsers */
+  -webkit-opacity: 0.65; /* WebKit browser e.g. Safari */
 }
 
 .material-symbols-outlined.stats {
